syntax = "proto3";

package system_stat_service;

option go_package = "./;internalgrpc";

service SystemStatsStreamService {
  rpc FetchResponse(RequestMessage) returns (stream ResponseMessage);
}

message RequestMessage {
  int32 n = 1;
  int32 m = 2;
}

message ResponseMessage {
  string title = 1;
}
